feat(csr): 添加企业社会责任活动内容和图片
添加了四个新的CSR活动内容（礼物赠送、长者关怀、教育支持和献血活动）及相关图片
更新了中英文翻译文件以反映这些新增内容

--- a/index.html
+++ b/index.html
@@ -1868,6 +1868,77 @@
             </div>
             <div class="row gx-0 align-items-top mb-5">
                 <div class="col-lg-6 p-2">
+                    <h3 data-i18n="csr.giftGiving2025.title">Sharing Smiles, Serving Communities</h3>
+                    <p class="fst-italic text-muted" data-i18n="csr.giftGiving2025.date">(December 10, 2025)</p>
+                    <p data-i18n="csr.giftGiving2025.description1">Driven by compassion and strengthened by teamwork, H
+                        Hospitality Group successfully conducted a Gift-Giving and Feeding Activity for children in
+                        Barangay Mabini.</p>
+                    <p data-i18n="csr.giftGiving2025.description2">This initiative reflects not only HHG’s commitment to
+                        corporate social responsibility, but also the heart of our people.</p>
+                    <div class="row">
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image1.webp"
+                                alt="Gift Giving 1"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image2.webp"
+                                alt="Gift Giving 2"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image3.webp"
+                                alt="Gift Giving 3"></div>
+                    </div>
+                </div>
+                <div class="col-lg-6 p-2">
+                    <h3 data-i18n="csr.elderlyCare.title">A Gesture of Care for Our Elderly</h3>
+                    <p class="fst-italic text-muted" data-i18n="csr.elderlyCare.date">(December 10, 2025)</p>
+                    <p data-i18n="csr.elderlyCare.description1">Through unity, compassion, and shared purpose, H
+                        Hospitality Group extended joy and care to 50 elderly residents of Barangay Mabini.</p>
+                    <p data-i18n="csr.elderlyCare.description2">Held for the first time, this initiative stands as a
+                        testament to the heart of HHG’s people.</p>
+                    <div class="row">
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image4.webp"
+                                alt="Elderly Care 1"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image5.webp"
+                                alt="Elderly Care 2"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image6.webp"
+                                alt="Elderly Care 3"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row gx-0 align-items-top mb-5">
+                <div class="col-lg-6 p-2">
+                    <h3 data-i18n="csr.brigadaEskwela2025.title">A Shared Commitment to Education</h3>
+                    <p class="fst-italic text-muted" data-i18n="csr.brigadaEskwela2025.date">(June 10, 2025)</p>
+                    <p data-i18n="csr.brigadaEskwela2025.description1">As part of its Corporate Social Responsibility
+                        (CSR), H Hospitality Group proudly took part in Brigada Eskwela 2025.</p>
+                    <p data-i18n="csr.brigadaEskwela2025.description2">Beyond the volunteer services rendered in Bucana
+                        National High School, Manlag National High School, and Calitang Elementary School.</p>
+                    <div class="row">
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image7.webp"
+                                alt="Brigada Eskwela 2025 1"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image8.webp"
+                                alt="Brigada Eskwela 2025 2"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image9.webp"
+                                alt="Brigada Eskwela 2025 3"></div>
+                    </div>
+                </div>
+                <div class="col-lg-6 p-2">
+                    <h3 data-i18n="csr.bloodDonation.title">Saving Lives, One Donation at a Time</h3>
+                    <p class="fst-italic text-muted" data-i18n="csr.bloodDonation.date">(August 13, 2025)</p>
+                    <p data-i18n="csr.bloodDonation.description1">In partnership with the Philippine Red Cross – Palawan
+                        Chapter, H Hospitality Group successfully conducted its second Mass Blood Donation.</p>
+                    <p data-i18n="csr.bloodDonation.description2">In recognition of this effort, HHG was honored by the
+                        PRC as the only hospitality company in El Nido actively leading a mass blood donation
+                        initiative.</p>
+                    <div class="row">
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image10.webp"
+                                alt="Blood Donation 1"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image11.webp"
+                                alt="Blood Donation 2"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image12.webp"
+                                alt="Blood Donation 3"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row gx-0 align-items-top mb-5">
+                <div class="col-lg-6 p-2">
                     <h3 data-i18n="csr.communitySupport.title">Community Support Network</h3>
                     <p data-i18n="csr.communitySupport.description">With around 300 employees, H Hospitality Group is
                         proud to contribute to the livelihood of around
