feat(csr): 添加Paw Rescue项目图片和翻译内容
添加Paw Rescue项目的7张图片，并在中英文翻译文件中新增相关描述内容。同时更新HTML页面展示这些CSR活动内容。

--- a/index.html
+++ b/index.html
@@ -334,6 +334,52 @@
                 </div>
             </div>
             <div class="main-timeline">
+
+                <div class="timeline left year2026">
+                    <div class="card">
+                        <div class="card-body p-4">
+                            <h3>2026</h3>
+                            <div class="row gx-0  align-items-top">
+                                <div class="col-6 p-1">
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#gentlemanCutModal">
+                                        <div style="aspect-ratio: 6 / 5; overflow: hidden;">
+                                            <img class="w-100 h-100" style="object-fit: cover;"
+                                                src="images/gentleman_cut/2.webp" alt="Gentleman Cut" />
+                                        </div>
+                                    </a>
+                                    <div class="modal fade" id="gentlemanCutModal" tabindex="-1"
+                                        aria-labelledby="gentlemanCutModalLabel" aria-hidden="true">
+                                        <div
+                                            class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
+                                            <div class="modal-content">
+                                                <div class="modal-body">
+                                                    <div class="row">
+                                                        <div class="col-4 p-1">
+                                                            <img src="images/gentleman_cut/2.webp" class="img-fluid"
+                                                                style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;">
+                                                        </div>
+                                                        <div class="col-4 p-1">
+                                                            <img src="images/gentleman_cut/3.webp" class="img-fluid"
+                                                                style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;">
+                                                        </div>
+                                                        <div class="col-4 p-1">
+                                                            <img src="images/gentleman_cut/1.webp" class="img-fluid"
+                                                                style="aspect-ratio: 6 / 5; overflow: hidden;object-fit: cover;">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <p class="card-text">Gentleman Cut</p>
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="timeline right year2025">
                     <div class="card">
                         <div class="card-body p-4">
@@ -1868,8 +1914,57 @@
             </div>
             <div class="row gx-0 align-items-top mb-5">
                 <div class="col-lg-6 p-2">
-                    <h3 data-i18n="csr.giftGiving2025.title">Sharing Smiles, Serving Communities</h3>
-                    <p class="fst-italic text-muted" data-i18n="csr.giftGiving2025.date">(December 10, 2025)</p>
+                    <h3 data-i18n="csr.pawRescue.title">Paw Rescue Project</h3>
+                    <p data-i18n="csr.pawRescue.description1">A funded spay and neuter initiative, the Paw Rescue
+                        Project was conducted from September 30 to October 6 to support responsible pet care in El Nido,
+                        Palawan. The project focused on spaying and neutering stray animals, as well as pets of owners
+                        who could not afford the procedure.</p>
+                    <p data-i18n="csr.pawRescue.description2">With the support of two volunteer veterinarians flown in
+                        from Isabela Province, local volunteers from El Nido, and employees of H Hospitality Group, a
+                        total of 382 animals were successfully spayed and neutered. Cats: 139 female, 82 male. Dogs: 96
+                        female, 65 male. This initiative reflects HHG's commitment to animal welfare and community care,
+                        helping create a healthier and safer environment for both animals and residents.</p>
+                    <div class="row">
+                        <div class="col-4"><img class="img-fluid" src="images/csr/paw_rescue/1.webp" alt="Paw Rescue 1">
+                        </div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/paw_rescue/2.webp" alt="Paw Rescue 2">
+                        </div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/paw_rescue/3.webp" alt="Paw Rescue 3">
+                        </div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/paw_rescue/4.webp" alt="Paw Rescue 4">
+                        </div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/paw_rescue/5.webp" alt="Paw Rescue 5">
+                        </div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/paw_rescue/6.webp" alt="Paw Rescue 6">
+                        </div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/paw_rescue/7.webp" alt="Paw Rescue 7">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 p-2">
+                    <h3 data-i18n="csr.giftGiving2025.title">Sharing Smiles Through Gift-Giving in El Nido</h3>
+                    <p data-i18n="csr.giftGiving2025.description1">Driven by compassion and strengthened by teamwork, H
+                        Hospitality Group successfully conducted a Gift-Giving and Feeding Activity for children in
+                        Barangay Mabini.</p>
+                    <p data-i18n="csr.giftGiving2025.description2">This initiative reflects not only HHG's commitment to
+                        corporate social responsibility, but also the heart of our people.</p>
+                    <div class="row">
+                        <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_children/1.webp"
+                                alt="Gift Giving 1"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_children/2.webp"
+                                alt="Gift Giving 2"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_children/3.webp"
+                                alt="Gift Giving 3"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_children/4.webp"
+                                alt="Gift Giving 4"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_children/5.webp"
+                                alt="Gift Giving 5"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row gx-0 align-items-top mb-5">
+                <div class="col-lg-6 p-2">
+                    <h3 data-i18n="csr.elderlyCare.title">A Gesture of Care for Our El Nido Elderly</h3>
                     <p data-i18n="csr.giftGiving2025.description1">Driven by compassion and strengthened by teamwork, H
                         Hospitality Group successfully conducted a Gift-Giving and Feeding Activity for children in
                         Barangay Mabini.</p>
@@ -1885,54 +1980,61 @@
                     </div>
                 </div>
                 <div class="col-lg-6 p-2">
-                    <h3 data-i18n="csr.elderlyCare.title">A Gesture of Care for Our Elderly</h3>
-                    <p class="fst-italic text-muted" data-i18n="csr.elderlyCare.date">(December 10, 2025)</p>
-                    <p data-i18n="csr.elderlyCare.description1">Through unity, compassion, and shared purpose, H
-                        Hospitality Group extended joy and care to 50 elderly residents of Barangay Mabini.</p>
-                    <p data-i18n="csr.elderlyCare.description2">Held for the first time, this initiative stands as a
-                        testament to the heart of HHG’s people.</p>
+                    <h3 data-i18n="csr.elderlyCare.title">A Gesture of Care for Our El Nido Elderly</h3>
+                    <p data-i18n="csr.elderlyCare.description1">With hearts full of compassion and hands ready to serve,
+                        H Hospitality Group extended warmth and care to 50 elderly residents of Barangay Mabini.</p>
+                    <p data-i18n="csr.elderlyCare.description2">This meaningful outreach brought smiles, companionship,
+                        and essential supplies to our beloved seniors, creating moments of joy and connection that
+                        reflect the true spirit of community care.</p>
                     <div class="row">
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image4.webp"
+                        <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_elder/1.webp"
                                 alt="Elderly Care 1"></div>
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image5.webp"
+                        <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_elder/2.webp"
                                 alt="Elderly Care 2"></div>
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image6.webp"
+                        <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_elder/3.webp"
                                 alt="Elderly Care 3"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_elder/4.webp"
+                                alt="Elderly Care 4"></div>
                     </div>
                 </div>
             </div>
             <div class="row gx-0 align-items-top mb-5">
                 <div class="col-lg-6 p-2">
-                    <h3 data-i18n="csr.brigadaEskwela2025.title">A Shared Commitment to Education</h3>
-                    <p class="fst-italic text-muted" data-i18n="csr.brigadaEskwela2025.date">(June 10, 2025)</p>
+                    <h3 data-i18n="csr.brigadaEskwela2025.title">Better Classrooms Through School Brigade</h3>
                     <p data-i18n="csr.brigadaEskwela2025.description1">As part of its Corporate Social Responsibility
-                        (CSR), H Hospitality Group proudly took part in Brigada Eskwela 2025.</p>
-                    <p data-i18n="csr.brigadaEskwela2025.description2">Beyond the volunteer services rendered in Bucana
-                        National High School, Manlag National High School, and Calitang Elementary School.</p>
+                        (CSR), H Hospitality Group proudly took part in Brigada Eskwela 2025, focusing on creating
+                        better learning environments for students.</p>
+                    <p data-i18n="csr.brigadaEskwela2025.description2">Our volunteers worked tirelessly to clean, paint,
+                        and repair classrooms in local schools, providing students with renewed spaces that inspire
+                        learning and growth. This initiative demonstrates our commitment to education and community
+                        development.</p>
                     <div class="row">
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image7.webp"
+                        <div class="col-4"><img class="img-fluid" src="images/csr/brigada_eskwela/1.webp"
                                 alt="Brigada Eskwela 2025 1"></div>
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image8.webp"
+                        <div class="col-4"><img class="img-fluid" src="images/csr/brigada_eskwela/2.webp"
                                 alt="Brigada Eskwela 2025 2"></div>
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image9.webp"
+                        <div class="col-4"><img class="img-fluid" src="images/csr/brigada_eskwela/3.webp"
                                 alt="Brigada Eskwela 2025 3"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/brigada_eskwela/4.webp"
+                                alt="Brigada Eskwela 2025 4"></div>
+                        <div class="col-4"><img class="img-fluid" src="images/csr/brigada_eskwela/5.webp"
+                                alt="Brigada Eskwela 2025 5"></div>
                     </div>
                 </div>
                 <div class="col-lg-6 p-2">
-                    <h3 data-i18n="csr.bloodDonation.title">Saving Lives, One Donation at a Time</h3>
-                    <p class="fst-italic text-muted" data-i18n="csr.bloodDonation.date">(August 13, 2025)</p>
+                    <h3 data-i18n="csr.bloodDonation.title">Saving Lives, One Blood Donation at a Time</h3>
                     <p data-i18n="csr.bloodDonation.description1">In partnership with the Philippine Red Cross – Palawan
-                        Chapter, H Hospitality Group successfully conducted its second Mass Blood Donation.</p>
-                    <p data-i18n="csr.bloodDonation.description2">In recognition of this effort, HHG was honored by the
-                        PRC as the only hospitality company in El Nido actively leading a mass blood donation
-                        initiative.</p>
+                        Chapter, H Hospitality Group successfully conducted its Mass Blood Donation initiative, bringing
+                        together employees and community members in a life-saving mission.</p>
+                    <p data-i18n="csr.bloodDonation.description2">This noble effort reflects our deep commitment to
+                        community health and well-being, as each donation has the potential to save multiple lives. Our
+                        partnership with the Philippine Red Cross demonstrates how collective action can make a profound
+                        difference in our community.</p>
                     <div class="row">
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image10.webp"
+                        <div class="col-4"><img class="img-fluid" src="images/csr/blood_letting/1.webp"
                                 alt="Blood Donation 1"></div>
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image11.webp"
+                        <div class="col-4"><img class="img-fluid" src="images/csr/blood_letting/2.webp"
                                 alt="Blood Donation 2"></div>
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image12.webp"
-                                alt="Blood Donation 3"></div>
                     </div>
                 </div>
             </div>
