docs(locales): 更新CSR部分的翻译和页面内容
更新了中文简体和繁体以及英文的CSR翻译内容，包括动物救援、儿童礼物赠送、长者关怀、校园服务队和捐血活动等项目的描述。同时调整了index.html页面以匹配新的翻译结构

--- a/index.html
+++ b/index.html
@@ -1942,12 +1942,15 @@
                     </div>
                 </div>
                 <div class="col-lg-6 p-2">
-                    <h3 data-i18n="csr.giftGiving2025.title">Sharing Smiles Through Gift-Giving in El Nido</h3>
-                    <p data-i18n="csr.giftGiving2025.description1">Driven by compassion and strengthened by teamwork, H
-                        Hospitality Group successfully conducted a Gift-Giving and Feeding Activity for children in
-                        Barangay Mabini.</p>
-                    <p data-i18n="csr.giftGiving2025.description2">This initiative reflects not only HHG's commitment to
-                        corporate social responsibility, but also the heart of our people.</p>
+                    <h3 data-i18n="csr.giftGivingChildren.title">Sharing Smiles Through Gift-Giving in El Nido</h3>
+                    <p data-i18n="csr.giftGivingChildren.description1">Driven by compassion and teamwork, H Hospitality
+                        Group (HHG) brought joy to nearly 700 children in Barangay Mabini, one of El Nido’s far
+                        communities, through a meaningful Gift-Giving and Feeding Activity.</p>
+                    <p data-i18n="csr.giftGivingChildren.description2">With the genuine involvement of HHG employees,
+                        children received gifts, warm meals, and heartfelt care, turning an ordinary day into a
+                        memorable experience. This initiative reflects HHG’s commitment to corporate social
+                        responsibility and the belief that giving back is strongest when done together. At HHG, every
+                        smile reminds us why service lies at the heart of what we do.</p>
                     <div class="row">
                         <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_children/1.webp"
                                 alt="Gift Giving 1"></div>
@@ -1964,28 +1967,16 @@
             </div>
             <div class="row gx-0 align-items-top mb-5">
                 <div class="col-lg-6 p-2">
-                    <h3 data-i18n="csr.elderlyCare.title">A Gesture of Care for Our El Nido Elderly</h3>
-                    <p data-i18n="csr.giftGiving2025.description1">Driven by compassion and strengthened by teamwork, H
-                        Hospitality Group successfully conducted a Gift-Giving and Feeding Activity for children in
-                        Barangay Mabini.</p>
-                    <p data-i18n="csr.giftGiving2025.description2">This initiative reflects not only HHG’s commitment to
-                        corporate social responsibility, but also the heart of our people.</p>
-                    <div class="row">
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image1.webp"
-                                alt="Gift Giving 1"></div>
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image2.webp"
-                                alt="Gift Giving 2"></div>
-                        <div class="col-4"><img class="img-fluid" src="images/csr/251220/image3.webp"
-                                alt="Gift Giving 3"></div>
-                    </div>
-                </div>
-                <div class="col-lg-6 p-2">
-                    <h3 data-i18n="csr.elderlyCare.title">A Gesture of Care for Our El Nido Elderly</h3>
-                    <p data-i18n="csr.elderlyCare.description1">With hearts full of compassion and hands ready to serve,
-                        H Hospitality Group extended warmth and care to 50 elderly residents of Barangay Mabini.</p>
-                    <p data-i18n="csr.elderlyCare.description2">This meaningful outreach brought smiles, companionship,
-                        and essential supplies to our beloved seniors, creating moments of joy and connection that
-                        reflect the true spirit of community care.</p>
+                    <h3 data-i18n="csr.giftGivingElder.title">A Gesture of Care for Our El Nido Elderly</h3>
+                    <p data-i18n="csr.giftGivingElder.description1">Guided by compassion and unity, HHG extended support
+                        to 50 elderly residents of Barangay Mabini, El Nido through a special cash and gift-giving
+                        initiative. This activity was made possible through the collective generosity of HHG employees
+                        who donated pre-loved items and organized a “Bazaar for a Cause,” transforming small personal
+                        contributions into meaningful acts of kindness.</p>
+                    <p data-i18n="csr.giftGivingElder.description2">Held for the first time, this initiative reflects
+                        the heart of HHG’s people. More than an extension of the company’s annual Gift-Giving Program,
+                        it honors our elderly with dignity, warmth, and appreciation, showing that at HHG, giving back
+                        is a shared commitment lived by every employee.</p>
                     <div class="row">
                         <div class="col-4"><img class="img-fluid" src="images/csr/gift_giving_elder/1.webp"
                                 alt="Elderly Care 1"></div>
@@ -1997,17 +1988,17 @@
                                 alt="Elderly Care 4"></div>
                     </div>
                 </div>
-            </div>
-            <div class="row gx-0 align-items-top mb-5">
                 <div class="col-lg-6 p-2">
-                    <h3 data-i18n="csr.brigadaEskwela2025.title">Better Classrooms Through School Brigade</h3>
-                    <p data-i18n="csr.brigadaEskwela2025.description1">As part of its Corporate Social Responsibility
-                        (CSR), H Hospitality Group proudly took part in Brigada Eskwela 2025, focusing on creating
-                        better learning environments for students.</p>
-                    <p data-i18n="csr.brigadaEskwela2025.description2">Our volunteers worked tirelessly to clean, paint,
-                        and repair classrooms in local schools, providing students with renewed spaces that inspire
-                        learning and growth. This initiative demonstrates our commitment to education and community
-                        development.</p>
+                    <h3 data-i18n="csr.schoolBrigade.title">Better Classrooms Through School Brigade</h3>
+                    <p data-i18n="csr.schoolBrigade.description1">As part of its Corporate Social Responsibility (CSR)
+                        efforts, H Hospitality Group proudly participated in School Brigade 2025, supporting public
+                        schools in preparing for the new academic year. HHG employees volunteered their time and energy
+                        to clean classrooms, repair chairs and tables, and repaint learning spaces, helping create safe
+                        and welcoming environments for students.</p>
+                    <p data-i18n="csr.schoolBrigade.description2">Beyond volunteer services at Bucana National High
+                        School, Manlag National High School, and Calitang Elementary School, HHG further strengthened
+                        its support by donating PhP100,000 worth of construction materials, reinforcing our commitment
+                        to building better classrooms and nurturing learning spaces for future generations.</p>
                     <div class="row">
                         <div class="col-4"><img class="img-fluid" src="images/csr/brigada_eskwela/1.webp"
                                 alt="Brigada Eskwela 2025 1"></div>
@@ -2021,15 +2012,18 @@
                                 alt="Brigada Eskwela 2025 5"></div>
                     </div>
                 </div>
+            </div>
+            <div class="row gx-0 align-items-top mb-5">
                 <div class="col-lg-6 p-2">
                     <h3 data-i18n="csr.bloodDonation.title">Saving Lives, One Blood Donation at a Time</h3>
                     <p data-i18n="csr.bloodDonation.description1">In partnership with the Philippine Red Cross – Palawan
-                        Chapter, H Hospitality Group successfully conducted its Mass Blood Donation initiative, bringing
-                        together employees and community members in a life-saving mission.</p>
-                    <p data-i18n="csr.bloodDonation.description2">This noble effort reflects our deep commitment to
-                        community health and well-being, as each donation has the potential to save multiple lives. Our
-                        partnership with the Philippine Red Cross demonstrates how collective action can make a profound
-                        difference in our community.</p>
+                        Chapter, H Hospitality Group successfully conducted its second Mass Blood Donation, collecting
+                        48 bags of blood from employees and partner donors. This life-saving initiative reflects HHG’s
+                        continued commitment to community care and public health.</p>
+                    <p data-i18n="csr.bloodDonation.description2">Recognized by the Philippine Red Cross as the only
+                        hospitality company in El Nido actively leading a mass blood donation initiative, HHG takes
+                        pride in turning compassion into action. With this program now set as an annual initiative, we
+                        remain dedicated to saving lives, one donation at a time.</p>
                     <div class="row">
                         <div class="col-4"><img class="img-fluid" src="images/csr/blood_letting/1.webp"
                                 alt="Blood Donation 1"></div>
